--- a/kubernetes/clusters/kube-prod/talos/talconfig.yaml
+++ b/kubernetes/clusters/kube-prod/talos/talconfig.yaml
@@ -7,6 +7,9 @@ domain: ${DNS_CLUSTER_DN}
 
 allowSchedulingOnMasters: true
 
+cniConfig:
+  name: none
+
 additionalMachineCertSans:
   - ${IP_CLUSTER_VIP}
   - ${DNS_CONTROLPLANE_FQDN}
@@ -67,7 +70,7 @@ patches:
     - op: add
       path: /machine/kubelet/extraArgs
       value:
-        feature-gates: GracefulNodeShutdown=true
+        feature-gates: CronJobTimeZone=true,GracefulNodeShutdown=true,ServerSideApply=true
     - op: add
       path: /machine/network/nameservers
       value:
@@ -81,6 +84,12 @@ patches:
       value:
         - network: 0.0.0.0/0
           gateway: ${IP_GATEWAY_K8S_VLAN}
+    - op: add
+      path: /machine/time
+      value:
+        disabled: false
+        servers:
+          - ${IP_NTP_SERVER}
 
 controlPlane:
   patches:
@@ -89,3 +98,7 @@ controlPlane:
         path: /machine/network/interfaces/0/vip
         value:
           ip: ${IP_CLUSTER_VIP}
+      - op: add
+        path: /cluster/apiServer/extraArgs
+        value:
+          feature-gates: CronJobTimeZone=true,GracefulNodeShutdown=true,ServerSideApply=true
