Enable cilium fluxtomization and taskfile tweaks

--- a/.github/taskfiles/talos.tasks.yaml
+++ b/.github/taskfiles/talos.tasks.yaml
@@ -51,6 +51,7 @@ tasks:
       - task: bootstrap
       - task: configfile-talos
       - task: configfile-kube
+      - sleep 60
       - task: :k8s:cilium-bootstrap
       - task: enable-vmtools
 
