--- a/kubernetes/deployments/core/_networking/cilium/app/bootstrap-install/base-values.yaml
+++ b/kubernetes/deployments/core/_networking/cilium/app/bootstrap-install/base-values.yaml
@@ -10,12 +10,12 @@ cgroup:
   hostRoot: "/sys/fs/cgroup"
 
 cluster:
-  name: "${CLUSTER_NAME}"
+  name: ${CLUSTER_NAME}
   id: ${CONFIG_CILIUM_CLUSTER_ID}
 
 tunnel: disabled
 autoDirectNodeRoutes: true
-ipv4NativeRoutingCIDR: "${IP_POD_CIDR_V4}"
+ipv4NativeRoutingCIDR: ${IP_POD_CIDR_V4}
 localRedirectPolicy: true
 ipam:
   mode: kubernetes
