--- a/kubernetes/clusters/kube-prod/config/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/config/kustomization.yaml
@@ -1,14 +1,8 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-secretGenerator:
-  - name: kube-prod-secrets
-    namespace: flux-system
-    envs:
-      - ./secrets.sops.env
-  - name: kube-prod-vars
-    namespace: flux-system
-    envs:
-      - ./vars.sops.env
-generatorOptions:
-  disableNameSuffixHash: true
+resources:
+  - secrets-age.sops.yaml
+  - secrets-ssh.sops.yaml
+  - kube-prod-vars.yaml
+  - kube-prod-secrets.yaml
