--- a/kubernetes/clusters/kube-prod/config/kube-prod-secrets.yaml
+++ b/kubernetes/clusters/kube-prod/config/kube-prod-secrets.yaml
@@ -3,9 +3,7 @@ kind: Secret
 metadata:
     namespace: flux-system
     name: kube-prod-secrets
-stringData:
-    GITHUB_TOKEN: ENC[AES256_GCM,data:ATRymknpjpUKB3Gac4EWJkDGZrt1zNRxRao6JZNQP6ZYO80eyeFmbmrlxLRdpSkNAmCu9pijBW32UdI=,iv:f/h0gRCoE897AqkyOleUb1g/GdZoTzo55v2GTuGzd3k=,tag:FWPFzHVrNRpO6L5RGg8RdQ==,type:str]
-    GITHUB_USER: ENC[AES256_GCM,data:SDcAUGmridBLeXmq7fvVanHwja400TXhFXGTRfSZFOrwib92e1oStFfNXFC5KGdCfpg889yggipr,iv:mZbO5G608EAvxfGTqPnlgNq1iCMiWE4ci2gu2SYLD9M=,tag:xdNBkDzJG71LTfybb8U7tg==,type:str]
+stringData: ENC[AES256_GCM,data:j/hMiFBaH7wFAygnvoBe8tq5EiAuFTf+czKZoKCAtcb41MAc+oSu3srRnot56JwJM3bNLNv7E0N65i+6iAL6+YTkfwGTGZGQaMRd7ItdK9aRgvrvORPnF4+DM4/MMmwqKdtJm3d9kLFLkwwHk1d4iKjC7WMF23fL3/0/t8U+/wXM8imrX9ViqFXIS1erEMh1eb0=,iv:3CoXzSm+qLu7W8HKEg/rdmCsSE7zQcHWOfY19AU+f8Q=,tag:EYywxn9vteKT5GlimmI5AQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +13,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSTQwWDlNVldUVEprWUZU
-            eURYOXpVSjhzVENCU1k0ZFlFVmwrZ25qWmxRClhnM3ZRU0RPOGhJYlhzR283Zngx
-            UXFuMFh3aUdLQ3VIdlljYW5SY1NlNVUKLS0tIEkveEp5TytURDNBNUJuUTBhS1lS
-            UG82dkJUb2xGRFI0VmJydGV6a0c2Q3cK6yR0Mpho4qKSjxRAFJO3GthtHkckKdte
-            J3OaSRb2s7ptzWqffEYktZkxoKFNk2XibJ9DyVh2quZ+Qlk/5KteSg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCOXY5RDNmY0ZtZE5JUUtx
+            ZVB2QkxZMmxoalo2TmlCWUVFRFBJMThJOVY4CjAwRWp2bWVXek5lcUpPSDc3OVcy
+            WWxxRVBDU3pOREtjb2Fyemh5TjRvdXMKLS0tIDRyT1RCU2szK0ZMWVZSNVo4Z0oz
+            V3o4Y2R4T0tpdzZ1cTNpbGJRTVdidDQKY8F226LvJDlZDQwU3qSyaNFQIDXpp8NM
+            TE1TSu6n6xA1N+wtDKax0aEJH/nI+K43drnyf/VILlewLjHbNkLaDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-18T04:45:03Z"
-    mac: ENC[AES256_GCM,data:ptCZnbdcRV/SDHTrmzDwlEHjCWMhxRyL6TWGgUGaXyLYTdBQS25f0TVuN0ioWEZ+2DebLj0h52jTSye7TPo5ig8dg2lu6NkCy9Y6RlwbrM1pBPZeiFdxgMZolHY02iDamwxTbpSG8RfmA9X9Qqwx856KLmDBxT/jq0v2iQtQmhI=,iv:m3JkSvB8JvS8K0hbpvX7ZsbRlz7X6FBgPU0e4zuGUUs=,tag:CF3HoeNRNBqyauEY0qjZQQ==,type:str]
+    lastmodified: "2023-11-19T04:33:23Z"
+    mac: ENC[AES256_GCM,data:tkWkUkH8mPEg8cP9y90/qRYXjOBp3l7qz75NUYPQViq8k6Kllr36mo/3UvSmaTJXxLjNFbqGEy26arbfALURGRYs2FBX5z1QOejZART3DUBVLTG2mMcGWb6uXiAxQEKtQTTn3oQRYj5pPayKjaSYdF4dcHLucld0uAKivRKIhm8=,iv:mS0NyHYRRtfYTpks+GX10HwjEfQ7rDDC6A2xPaSW2/M=,tag:z1ymwylYOs5aQuo2k0Hu7A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
