--- a/.github/taskfiles/cluster.tasks.yaml
+++ b/.github/taskfiles/cluster.tasks.yaml
@@ -46,10 +46,10 @@ tasks:
       SECRET_TEMPLATE: "{{.ROOT_DIR}}/kubernetes/bootstrap/config/secret.tmpl.yaml"
       SOPS_DIR:
         sh: echo {{.SOPS_FILE}} | xargs dirname
-      SED_COMMAND: 's/="/: /m;s/.$//'
+      SED_COMMAND: 's/\="/: "/g'
     cmds:
       - cat {{.SOPS_FILE}} > {{.SOPS_DIR}}/vars.unencrypted.yaml
-      - sed -i '{{.SED_COMMAND}}' {{.SOPS_DIR}}/vars.unencrypted.yaml
+      - sed -i {{.SED_COMMAND}} {{.SOPS_DIR}}/vars.unencrypted.yaml
       - yq eval-all 'select(fileIndex==0).stringData = select(fileIndex==1) | select(fileIndex==0)' {{.SECRET_TEMPLATE}} {{.SOPS_DIR}}/vars.unencrypted.yaml > {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
       - CLUSTER={{.C}} NAME={{.NAME}} yq -i '(.. | select(tag == "!!str")) |= envsubst' {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
       - sops -e {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml > {{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/config/{{.C}}-{{.NAME}}.yaml
