--- a/kubernetes/clusters/kube-prod/config/kube-prod-secrets.yaml
+++ b/kubernetes/clusters/kube-prod/config/kube-prod-secrets.yaml
@@ -3,7 +3,9 @@ kind: Secret
 metadata:
     namespace: flux-system
     name: kube-prod-secrets
-stringData: ENC[AES256_GCM,data:j/hMiFBaH7wFAygnvoBe8tq5EiAuFTf+czKZoKCAtcb41MAc+oSu3srRnot56JwJM3bNLNv7E0N65i+6iAL6+YTkfwGTGZGQaMRd7ItdK9aRgvrvORPnF4+DM4/MMmwqKdtJm3d9kLFLkwwHk1d4iKjC7WMF23fL3/0/t8U+/wXM8imrX9ViqFXIS1erEMh1eb0=,iv:3CoXzSm+qLu7W8HKEg/rdmCsSE7zQcHWOfY19AU+f8Q=,tag:EYywxn9vteKT5GlimmI5AQ==,type:str]
+stringData:
+    GITHUB_TOKEN: ENC[AES256_GCM,data:I8qjfyYxmTmxtdfwpSbnphf52Sp4I7FM37i5u2+dm0drH2+7gEeuBQWS9BAtfTDNv7eXZ0Ls92E2r7A=,iv:Su+reiW7s6MOw3IMu43kxigEzBuVtgZ2lyajEpTgnOQ=,tag:V24CpnFI6n4amsf5H3QPvw==,type:str]
+    GITHUB_USER: ENC[AES256_GCM,data:orRsXnYgduuIGVAcNowpqY0j3YlJ0gz9+cNimwyEP3VmEYn9Z516N8hL4Dwb6y9KhLYEzLHhC4Lz,iv:GcB45JIbwzuk1Y64dwNpgMrPXn1kZDjGiSDWyj8p5jw=,tag:kLSkEyYK4nBxf+4XWuIibA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,14 +15,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCOXY5RDNmY0ZtZE5JUUtx
-            ZVB2QkxZMmxoalo2TmlCWUVFRFBJMThJOVY4CjAwRWp2bWVXek5lcUpPSDc3OVcy
-            WWxxRVBDU3pOREtjb2Fyemh5TjRvdXMKLS0tIDRyT1RCU2szK0ZMWVZSNVo4Z0oz
-            V3o4Y2R4T0tpdzZ1cTNpbGJRTVdidDQKY8F226LvJDlZDQwU3qSyaNFQIDXpp8NM
-            TE1TSu6n6xA1N+wtDKax0aEJH/nI+K43drnyf/VILlewLjHbNkLaDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwZGVUWDg0T0hlNDQzVDBu
+            dDdCSFZWZkZzWHFFN1FCekFHS0Y4NHkyeFM0CjUvdjMrYjFyYmF0cGxXZFdBTkVm
+            RlFGSUoyZlk0UGc4RTZ2ME5meTVmb3cKLS0tIE9oUVp4WGNPeGZnR3h4aGIzVURV
+            aEQxbnhOOVYwZXh2dHk3bjdZdUFLVnMK7uJ3nkPHA5s97Abg9tNUIxQ3NwjuH8b/
+            YwIVaPgVIjy1Qbf9XxFFUEkAoLrKuA/KCbCOpq6jm++l55FmR5n4GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-19T04:33:23Z"
-    mac: ENC[AES256_GCM,data:tkWkUkH8mPEg8cP9y90/qRYXjOBp3l7qz75NUYPQViq8k6Kllr36mo/3UvSmaTJXxLjNFbqGEy26arbfALURGRYs2FBX5z1QOejZART3DUBVLTG2mMcGWb6uXiAxQEKtQTTn3oQRYj5pPayKjaSYdF4dcHLucld0uAKivRKIhm8=,iv:mS0NyHYRRtfYTpks+GX10HwjEfQ7rDDC6A2xPaSW2/M=,tag:z1ymwylYOs5aQuo2k0Hu7A==,type:str]
+    lastmodified: "2023-11-19T05:11:57Z"
+    mac: ENC[AES256_GCM,data:Abw0Yav/KbT8z3NZo9+LctS6dzoWuULWzrBCfbJRImNu7wSWTiPS5Act6PKQIoSy0nnXmulXlxpMe2+5iaugZiHQwQ+22HRzj1nlL17r0SSDw+9JBlkDRA7W5Kf+zSfE0T1l94YibvVmcfvyQucm/Dj1db00NTBfTlSXNL0v8No=,iv:W5hyM0m9KKsuRJ6BGkixhZsiLtOcNSxziB5FQZjSQFE=,tag:SI5WbDFWA+fQEIdL84bPTw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
