--- a/.github/taskfiles/cluster.tasks.yaml
+++ b/.github/taskfiles/cluster.tasks.yaml
@@ -26,11 +26,11 @@ tasks:
     cmds:
       - task: decrypt-sops
         vars:
-          ENV_FILE: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/config/vars.sops.env"
+          ENV_FILE: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/vars/vars.sops.env"
           NAME: '{{ .NAME | default "vars" }}'
       - task: decrypt-sops
         vars:
-          ENV_FILE: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/config/secrets.sops.env"
+          ENV_FILE: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/vars/secrets.sops.env"
           NAME: '{{ .NAME | default "secrets" }}'
 
   decrypt-sops:
@@ -52,7 +52,7 @@ tasks:
       - sed -i {{.SED_COMMAND}} {{.SOPS_DIR}}/vars.unencrypted.yaml
       - yq eval-all 'select(fileIndex==0).stringData = select(fileIndex==1) | select(fileIndex==0)' {{.SECRET_TEMPLATE}} {{.SOPS_DIR}}/vars.unencrypted.yaml > {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
       - CLUSTER={{.C}} NAME={{.NAME}} yq -i '(.. | select(tag == "!!str")) |= envsubst' {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
-      - sops -e {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml > {{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/config/{{.C}}-{{.NAME}}.yaml
+      - sops -e {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml > {{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/vars/{{.C}}-{{.NAME}}.yaml
 
   apply-resources:
     dir: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}"
@@ -62,17 +62,9 @@ tasks:
       - sh: '[ {{.APPLY}} = "true" ]'
         msg: "Apply isn't enabled, will not apply!"
     cmds:
-      - sops --decrypt ./config/secrets-age.sops.yaml | kubectl apply -f -
-      - sops --decrypt ./config/secrets-ssh.sops.yaml | kubectl apply -f -
-      - sops --decrypt ./config/{{.C}}-secrets.yaml | kubectl apply -f -
-      - sops --decrypt ./config/{{.C}}-vars.yaml | kubectl apply -f -
-      #- kubectl apply --server-side -f ./flux/flux-repo.yaml
+      - sops --decrypt ./vars/secrets-age.sops.yaml | kubectl apply -f -
+      - sops --decrypt ./vars/secrets-ssh.sops.yaml | kubectl apply -f -
+      - sops --decrypt ./vars/{{.C}}-secrets.yaml | kubectl apply -f -
+      - sops --decrypt ./vars/{{.C}}-vars.yaml | kubectl apply -f -
+      - kubectl apply --server-side -f ./flux/flux-repo.yaml
 
-  # Cleanup unencrypted temp secret manifest files
-  cleanup-secrets:
-    dir: "{{.SECRETS_DIR}}"
-    status:
-      - test -f {{.C}}-*.unencrypted.yaml
-    cmds:
-      # Remove all unencrypted temp secret manifest files
-      - rm -rf {{.C}}-*.unencrypted.yaml
