--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../config/
+  - ../vars/
   - flux-install.yaml
   - flux-repo.yaml
   - ../../../deployments/core/_networking/cilium/
