--- a/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
+++ b/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
@@ -4,38 +4,40 @@ metadata:
     namespace: flux-system
     name: kube-prod-vars
 stringData:
-    TALOS_VERSION: ENC[AES256_GCM,data:KD4iD7FA,iv:x2XPsEHep63gJd+GvVD7FRbATVRMsoFrfmMOtWWv7rU=,tag:OUgSxhCW5n+woRihD8qT1w==,type:str]
-    KUBERNETES_VERSION: ENC[AES256_GCM,data:MqNBurZ5Eg==,iv:1jB2+4apnBHWgcnxhRaEurq6lm6prD6y53ixcg0AZvw=,tag:VOv+0E02GOVv1u4WFZ64xg==,type:str]
-    CLUSTER_NAME: ENC[AES256_GCM,data:tv/WdI2q+gLF,iv:LR1eHBRlYFM1pljSXUQiyUa3wjntN4KXmRcbNEV1Df0=,tag:5GvK/qtHWqT1f++8z4Vo5g==,type:str]
-    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:BA==,iv:VvwVrWxxVtjlISY8uLDnXLDr7m8l9CAWpM8GW2CtcHg=,tag:ke+80lRTpawISSS009dawg==,type:str]
-    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:sg==,iv:JzrHsXjuH8bp/AzuE1DVaLEGidgAv0/+LCwv3P9RoQ4=,tag:2payCyYYJZ97HkPtgn6SqQ==,type:str]
-    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data://C0Lw==,iv:c2qXxh5tmKwohGkdVxtdfEwh6U7nG2j+GXapo6X2XN8=,tag:IvpH/vVFNMfw+mNR2rzplQ==,type:str]
-    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:pyn4,iv:QfnaQhJ6o607Bd+5IMaona0vwSdpaTmytnK1/EVQLnY=,tag:HyN2RLXyshGlVADiADbF+w==,type:str]
-    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:MQ==,iv:DfxmTqOPOotPPG9mi7vCn0aBpURFWQBWz8bfXyBYh54=,tag:Ib+Lj82MxfyRPJCtx+jntQ==,type:str]
-    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:x9o8gw==,iv:bYlvPMwYnAGqcgrMhjm+X7HhUXJl/Lz9PfOFs6pV230=,tag:kKEdFkza4TxqpuUyXIpYdA==,type:str]
-    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:h2+M,iv:0f4VomzOJ8xfftI+/0o6pTbmRv2gn1RkkTSijopDrEg=,tag:A2HgtIkExonOzVS+yMgETw==,type:str]
-    DNS_CLUSTER_DN: ENC[AES256_GCM,data:q4KmTp3ZMHCmMahyZQ==,iv:l2Uu6jRIVA2mg+HRKQ1vvBsyl1iObENX5HJbzrLltC8=,tag:jv0m1rQmTox9rbZ9AP6Eyg==,type:str]
-    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:ZN5LeQbYcwzKUSVo8xlddi0542Ugi02B8Cs=,iv:6FyIaqdISqGZMsfCm/qf1ac+EwFFxoegeA1LQqf6q3U=,tag:pwOokBBvUQbHgw1CoYyhxQ==,type:str]
-    IP_CLUSTER_VIP: ENC[AES256_GCM,data:qDHr5ubwxHERmH8a,iv:5CRgc6rPErqrJvcVX8KA+35ipuhtkF/lY3rHcWwq6J0=,tag:dkqzeUU+YjIAar9vnEQy4Q==,type:str]
-    IP_POD_CIDR_V4: ENC[AES256_GCM,data:+QpqE0mScwvqPP6C,iv:Bt0723gSqUGTl0Ol9gyHeVBtV0sRAyhZKJhwfugNIiE=,tag:dLg6e+TTxIs4PF/c+ziMcg==,type:str]
-    IP_SVC_CIDR_V4: ENC[AES256_GCM,data:9xzTJDUsqEADP6TOUQ==,iv:9oAwtZ3LB+r1OeDxSbQNh3It+B9kxnai2Vjcke5+cLE=,tag:Rqoz12D//vGxKLGxMkfY/A==,type:str]
-    IP_CONTROL_01: ENC[AES256_GCM,data:NM7ka9FnINqPn69n,iv:az5ExIqLgu7G/wagMAgLR89PvlVvEqXo850/+dJUkVY=,tag:o+eVN1ciCPSHi8dyulE8yA==,type:str]
-    IP_CONTROL_02: ENC[AES256_GCM,data:qo0mmU+1708kxzJB,iv:9fCUQVSqPV0kFkM8tLGFS/ZYaZQB2kwOzx3V+sITPbQ=,tag:O0yVHVjDgm2ApQ6lmybEFg==,type:str]
-    IP_CONTROL_03: ENC[AES256_GCM,data:Q7Xm2a3VODcTXQ81,iv:xkO1FncR0qUvPpAI0PDb/Rq4vbalRu/R5BqwklX5qo4=,tag:bfUHuR9LERrdZa5cjTX1Cg==,type:str]
-    IP_WORKER01: ENC[AES256_GCM,data:EtQi4wA+EBFD0kHW,iv:YATMnSYZA79f5fAIQDw5wWMxNNw9BPKZmHm6X3P2qZE=,tag:HEp1rRXfKmFA+PLmzTh0aw==,type:str]
-    IP_HOME_DNS_1: ENC[AES256_GCM,data:/brkdF9YLiCBppPx,iv:/soLF+F3uM+DEUAdcnnd21vDA5Bq9+iIHqmXP1RkBDU=,tag:rTpkOnN9iU75Kdmr66NedQ==,type:str]
-    IP_HOME_DNS_2: ENC[AES256_GCM,data:uh/o+q/IbPAdNzvb,iv:MWICbU8KALqN17afA6XdgPvsaBSt4k4ybtKmUmbPqNw=,tag:dTqsMOT9TgGR2lM4M/xNiA==,type:str]
-    IP_GATEWAY_K8S_VLAN: ENC[AES256_GCM,data:ZLryKV6N0txTEEg=,iv:+M7k9A6TUbQQk3Q63U789h41ga+2HSYzn+D29Mvr2jU=,tag:qYc6/O/OMtyg9hqqZHaCAA==,type:str]
-    IP_NTP_SERVER: ENC[AES256_GCM,data:wTVahoN5SqGwfiE=,iv:yWBk0I1KPwNE2lWpRQXWYYZQSunZZQnQrjNJu8KLNfM=,tag:m6zhjyv3owpNEHERHGsHoQ==,type:str]
-    IP_LB_CIDR: ENC[AES256_GCM,data:L6gfMYRBGXV6D0s=,iv:qGSVppw66uHddZmXwO4wqrWpaTsJxRg7LNbOdFJjNjQ=,tag:lZw693YrV3/RfDhwkHgy8A==,type:str]
-    GOVC_INSECURE: ENC[AES256_GCM,data:RWEZVw==,iv:2FHPAkXUNA0Y1ZwmnIiod3XDtVnOH8Hm9Ft9tIzAR18=,tag:vvX21HoG1i6ftUpbP/hQdA==,type:str]
-    GOVC_LIBRARY: ENC[AES256_GCM,data:7tZUtkU=,iv:wiCiTJ1WSfPYii+5Nt9ERDanGLADQqvxAaG+yqDPRpw=,tag:K1mPfMLS35M+EXycFs79wg==,type:str]
-    GOVC_DATACENTER: ENC[AES256_GCM,data:lyvrH+RZqswvx/1OuQBa,iv:9/84u66yL6j5ljoo+oGY7Yq16rJpfrv98WW+6iF3U14=,tag:LCqIWgQfm8+zUay8KvtdkQ==,type:str]
-    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:kTsXgIt6L1/l8UcaTWt4UpGP61KW7fY=,iv:TyZI0t6l+dYcIUzsIoNVdMxY0g/TkjI0nBZiOOUyWfA=,tag:G2Yt6LtUax+gLQJqC2QX8A==,type:str]
-    GOVC_DATASTORE: ENC[AES256_GCM,data:ziK2eEUDmpMn9NLA/Q==,iv:99xiRxRo9U0HcFpa/2O/JJmWdyRCWQB0IypeAtA/NL4=,tag:E56/8SAabJWQMAW/0e/S9g==,type:str]
-    GOVC_NETWORK: ENC[AES256_GCM,data:wD8a,iv:w8qD58JMeBWwe2FglUaf5ymH4ZyVb6l1yWXQ9c+naus=,tag:8WF33fud4funHJXuDDAHpQ==,type:str]
-    ASN_ROUTER: ENC[AES256_GCM,data:KbotPds7KpA=,iv:/F4KJLBFaLbgOwvnM04YnKHAS1N60ZaD+MwnWx6tws0=,tag:y9t3YEaN73sKlDM3AW7exg==,type:str]
-    APP_DNS_HUBBLE: ENC[AES256_GCM,data:Q8hBphpAZNw41uYKf1Z9PfgwFLxANTE=,iv:h/d5wSGH9Oo9ZD8pa6ZXgGCaT/JII1CBmpRB1577eE4=,tag:a3SCsuCx0wTTQsvrPKj19Q==,type:str]
+    TALOS_VERSION: ENC[AES256_GCM,data:qgZ6Ihao,iv:qKaHWPU27n2cnEiIONfYWmAAUCJluh6PAAay5SXrniM=,tag:zimIiSKCUTZqlSAsXy0nwQ==,type:str]
+    KUBERNETES_VERSION: ENC[AES256_GCM,data:Eh420XwN+g==,iv:ddwtxQGbXWdIGubyKXr8/tqnT4UtXJ0f1p2pjO15DPI=,tag:0FMFHetKJcZoEXHFx/UaeA==,type:str]
+    CLUSTER_NAME: ENC[AES256_GCM,data:Rh/3xzwKmnA+,iv:6XZiaaKwgZHd4n5Pon+5Gp9IbZrEjPfiwvygTt9XV7A=,tag:mE61YatoGIOA72AKpQp0WA==,type:str]
+    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:lA==,iv:HEiMAbvOlL3A3i9QIwpl9/jePPfRTI5QFU5Bksu2fAw=,tag:1LJcTDbyzOFW2O+EBMguXg==,type:str]
+    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:7A==,iv:WPH8wbeC9lJ5hn8MbxTsrpDAO6XHmy0TIRHwiYqbQ84=,tag:6IqsBocKtmqhdVQ+Tn+gmA==,type:str]
+    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:gmwkCg==,iv:hoxxoGJ8IF6Yts1n5qiW6m0d69Ixh1u0iScbOVYQVjg=,tag:YmwAmqC8iucXqc7JXIcj8g==,type:str]
+    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:AZiP,iv:UiL7l/8oyk0hFJr/Wl6L9CNw6Ysj4BHxp9sw79FDIqY=,tag:SHM1hhwh94wQEHbgTKMaXw==,type:str]
+    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:Vg==,iv:kultlaKTFxBLPs4s3zRtR0sdQ78PdsciMJ01unQLU8Q=,tag:YHQgM3CX/KFu4Z6v2qJJQw==,type:str]
+    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:t9x24A==,iv:WbbM0+WgbJRL8c2MUks8Xrol8abRnvf1FUYforOgL2c=,tag:9Zs7UIsz8NW3qHVtNVSizg==,type:str]
+    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:zalj,iv:zz6Pa14ULl/yie6yqhqtXB9BsMfLb3V17GA8mEXJ4bY=,tag:4QB2XsYDYZtCa8Y+RLN2JQ==,type:str]
+    CONFIG_TZ: ENC[AES256_GCM,data:fUwFCB8HIJmUJOEqsfi5RA==,iv:+lMNPPHaNpHHk4sDZKOxbDsHiSAEdwy9bDTiMHgEhiM=,tag:lA1G2gpAMtqBINVRhE/dRQ==,type:str]
+    DNS_CLUSTER_DN: ENC[AES256_GCM,data:V5RM50/Y7W7uXNa/7g==,iv:n3ZCzwUoJy8C2PMhws1OifIdUINNJ3MoFfMUW2fE7HQ=,tag:3G0oQhifB/sN1g1sL39UKw==,type:str]
+    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:oeCDSDLb3oesl9NaLeYVW6y4+zrne79Psjc=,iv:3IGzz++gHCV3kKPQ/2hH726izOgqJz/51GgOmpLAi7M=,tag:bqyxuTY0bGGbMNdP0Eg/Pw==,type:str]
+    IP_CLUSTER_VIP: ENC[AES256_GCM,data:dZcSGsMv+TA8t4an,iv:AvmxPDBng/509wmY0KJKeyCNRyr+4M9u2N4pPyskhs0=,tag:TNbrHv4GlR6dlubox2dWMw==,type:str]
+    IP_POD_CIDR_V4: ENC[AES256_GCM,data:fKpu8TcmAP8yYbRa,iv:c0szdgZtDd7ZtWcmV0HJ5a5ShR4754cgHCaXzZJTlCI=,tag:bGsQgW5kkvTzC1o3OgJ12A==,type:str]
+    IP_SVC_CIDR_V4: ENC[AES256_GCM,data:PLjNuFSH8aks3H7pbA==,iv:apaD3BgPeXENK8ih/8wEL2IqFTsyAUTBZBKyh+K12ao=,tag:x2PlYbwFY6bxPA4jkst8Dw==,type:str]
+    IP_CONTROL_01: ENC[AES256_GCM,data:4JKKdeQoyh1IhlIQ,iv:bgJ4MYPy5mBQpg2yBkzcsoy+Ezc7G1E8Me6i3IZ1QmM=,tag:aBNvbf/qpmo7St5wfdpbgQ==,type:str]
+    IP_CONTROL_02: ENC[AES256_GCM,data:A4DYT25YRcpyJADC,iv:7E5XXoRH3pzJ19vUotMbrV4Eyyd2xyCjR57NtuXAnGU=,tag:ZzOTd5RbjcKEtchlBKWNoQ==,type:str]
+    IP_CONTROL_03: ENC[AES256_GCM,data:c5RO++5c6il2UYul,iv:gvaIaNcUkhhbNsYD/BwpS7jYVwHvkXhtEPlInGUWJMc=,tag:IiuDpycEsqOMFYI1eXepcg==,type:str]
+    IP_WORKER01: ENC[AES256_GCM,data:3OfsEXyFE12Zo4Oj,iv:V7Oei81LSx5eX/DNOk1i8HL9+bCju9AvKgy/q54oWI0=,tag:cTYLe5/fdXFy75pN2nIVUA==,type:str]
+    IP_HOME_DNS_1: ENC[AES256_GCM,data:Rkkk2mkReDyf7T1s,iv:1gJRubzQqsaqriFsUkmi+QTmRtBw7Ekul8RlEMSbh2o=,tag:LpR3OyAEln25MEr+TZC4QA==,type:str]
+    IP_HOME_DNS_2: ENC[AES256_GCM,data:zU+lZhAkJH1TjXy6,iv:Bn3GbZfBKf52a7EpJGUpIPJVc48os5Rj/g7ugNTvEoQ=,tag:0R1Pn7wmbY08TRFPvdqqyg==,type:str]
+    IP_GATEWAY_K8S_VLAN: ENC[AES256_GCM,data:umdCMmthDD9v3vI=,iv:cOJOUlTJ/U3k/xo3AemrQZbiLSM8aksOiSZNUqmiwyM=,tag:eoPcGR1BIwjn8O+9NJmShw==,type:str]
+    IP_NTP_SERVER: ENC[AES256_GCM,data:umqydZg7VGdb9EU=,iv:QqkLbylzwka2PcnvLAp7J1wx0R5a7n38oR2OheKdF/8=,tag:j0QwEw54HGpyVHJkHOyHtQ==,type:str]
+    IP_LB_CIDR: ENC[AES256_GCM,data:zloA7yN91FktSLI=,iv:0gz8r9tcsxf9dkrnD9H82IJ8oKwhlodC1yQvM/AYLVI=,tag:t3/bAYWRkn/GbkuIlym/bw==,type:str]
+    GOVC_INSECURE: ENC[AES256_GCM,data:4vH2Aw==,iv:9i7I8tgmDVvHNbKdn06WGrSsaoqToexGsfSO6DbI7GY=,tag:NU+/P+7/HmwErOVSys0omw==,type:str]
+    GOVC_LIBRARY: ENC[AES256_GCM,data:eYKhDP8=,iv:HpxudWr4h9lsJDMa9TvqxsbYmPWLkk5lM0EPI0YJ7t4=,tag:s8F/o8mSpoOYwwicHVTQSA==,type:str]
+    GOVC_DATACENTER: ENC[AES256_GCM,data:c2/JISn1HRWG1XtlYYXS,iv:WeQfHrq2THoVTgWHaJKLI1DHuAUg9BU0EEZPFN4RNU8=,tag:EFYpGZJxqSQT8EzpM10Hgg==,type:str]
+    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:gAHsrOuGk0Io3EmvogJUfOXHpGo5WoU=,iv:mMvV6zt6mOuSOmLjbALDvd+hnRf6veIBVy/kWbpNBvM=,tag:LAwtDVpemzAsjPox3e8GYg==,type:str]
+    GOVC_DATASTORE: ENC[AES256_GCM,data:DV6RJcaI4KPIJYFtyw==,iv:wb7IwNJ0DTSR3d9WZxLtp4Z3yxEDHeEzQRvp0BylT2g=,tag:H/y9MjD7lbnQnQiwuSE5uQ==,type:str]
+    GOVC_NETWORK: ENC[AES256_GCM,data:2tBk,iv:2NXUcBKhpeV8L12ehckUamVWvoiD91Upzd4ysz3vT8Y=,tag:/OUppG+7CF/WJ5rJ1BElnw==,type:str]
+    ASN_ROUTER: ENC[AES256_GCM,data:62lof2PMPgU=,iv:GVmPjrJzAGyGciK46nWCgyR+5Thkg4t1QQjN3rY5mKM=,tag:n8m8DKiLiPAtJaaBORhjnA==,type:str]
+    APP_DNS_HUBBLE: ENC[AES256_GCM,data:KmoWP8JsbFrzBhEBsQaFqjpI7D5vQ9c=,iv:cO+7YwrdFD7nke8E/wQVtmO/ZI6+NgrDlDXxXApBa7g=,tag:kYV1dyDnb4GWAFciW9rCtw==,type:str]
+    APP_IP_NGINX: ENC[AES256_GCM,data:HcYbgRIHoEpZ,iv:W3LwLGHy6jcizi0Z7v+Kz/6lNZWnXuxu9nXchdNPq6k=,tag:e2xqqxCq+PQQqhQpq2AZGw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -45,14 +47,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtNFN0T2hsOUhicHU3WUEx
-            cGFIN2xrNENGSlhjK1JjQ0F6ZHhPazEyK1ZRCkxsNWNvTEJBV0hmbm5sTkxRZmJP
-            U1FmYTg1YU0zYXpjTGszYmQ2VUZtdnMKLS0tIDZYR216dzdmNGttaUJSWkxpdVE0
-            aEdUQUwvdE8vSEh0RGxrVjJrZitRYlEKoStfJIAkQtfIlgl5vuijEA2ztTpdbN46
-            HQRnpKrPUqD3aj2ms6ImeRjnXbwDvekasMDOEovVbYi/zVxSotGwPQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0Z0E1cVFSbmdrczdYVXJy
+            SmVsaVhGdjFsVlYrTjlWbXVtbjk2VHNVQ3hVCmlOZ2sxYUo0dnRhYUIwQ1c4ZUJw
+            dmNuK2NtZmxVSC9WSk5GRnk1THZhY3MKLS0tICtHTVFKenB4eVBTL2MrVkYzeVFQ
+            aDB2QVI2cUE5NnZSQksyV0tVTGIyVkUKPJY4rWzEQ6wb/Iaxhv5OwFa+b8JqSeTn
+            cmEdibI1X1cqiAGMSJSk3IBpscFRLqViSJeCCuyN70xmtuv4TkAgyg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-20T05:15:08Z"
-    mac: ENC[AES256_GCM,data:0LsYjlB7gtrtcrlzOvnbEIE2vKTSFwpgdTAPdOqK4l91gUS9YbzVA+3wl+z1n1OSohL05svEjzQksS/EkhIG+p2XrZCr1p4mgc/nUftd5yc/VUedu7C9A37o/7forPPVmBZgqITjaf8lNb3/EoOgkC5agDBJ+DFZh74+nPckv40=,iv:cA7SnbOSjtaFCDPqjrD8nvcZ3yQkCC+FC+mCZg0KNG4=,tag:kUw+l3yyzjXzA5Xo+Qq3LA==,type:str]
+    lastmodified: "2023-11-20T14:11:24Z"
+    mac: ENC[AES256_GCM,data:y0hVtPAOW9lJa0ZInSVEt2o9SZ+S97ScpYGwFNxT1JvskKKfjtiNaH8WAkH0d4TLb9nr6hVAI2rELgveQidk1Lw0vWvvZSC9wWsRNKBaWwHOc2bnF6nP5dtyN2F1W7l8YawpDon1Mo5xLnROlCZYmUyumOZIbFhBnXGO/FJ76tk=,iv:AmLftLwBNBlIJbd7tzpFCiGCloR3OeymTZY5+4Cgbp4=,tag:WDLR4oU+Y7MtzgwlaBuUow==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
