Integrate NGINX Ingress

--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - flux-install.yaml
   - flux-repo.yaml
   - ../../../deployments/core/_networking/cilium/
+  - ../../../deployments/core/ingress/_deps/
+  - ../../../deployments/core/ingress/ingress-nginx/
