--- a/kubernetes/deployments/core/ingress/ingress-nginx/ks.yaml
+++ b/kubernetes/deployments/core/ingress/ingress-nginx/ks.yaml
@@ -8,5 +8,5 @@ metadata:
     prune.flux.home.arpa/disabled: "true"
 spec:
   path: ./kubernetes/deployments/core/ingress/ingress-nginx/app
-  #dependsOn:
+  dependsOn:
     #- name: 1-core-ingress-deps
